<resources>
    <string name="action_settings">action_settings</string>
    <string name="app_name">地上铁</string>
    <string name="regist">注册</string>
    <string name="regist2">立即注册</string>
    <string name="regist3">已有账号，前往登录</string>
    <string name="ok">确定</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="getyzm">获取验证码</string>
    <string name="regist_check">我已阅读并同意《会员服务条款》</string>
    <string name="checkinfor">我已阅读并同意《地上铁企业租车服务条款》</string>
    <string name="main">主页</string>
    <string name="main_user">会员</string>
    <string name="main_zuche">租车</string>
    <string name="baocun">保存</string>
    <string name="main_charge">充电</string>
    <string name="zujin">租金:</string>
    <string name="fenshizu">时租</string>
    <string name="duanzu">短租</string>
    <string name="changzu">长租</string>
    <string name="saoma">扫码充电</string>
    <string name="qianbaochongzhi">钱包充值</string>
    <string name="chongdianzhuang">充电桩</string>
    <string name="huiyuanzhongxin">会员中心</string>
    <string name="wodeqianbao">我的钱包</string>
    <string name="wodejifen">我的积分</string>
    <string name="lvka">绿卡</string>
    <string name="yinka">银卡</string>
    <string name="jinka">金卡</string>
    <string name="zuanshi">钻石</string>
    <string name="wangjishoushimima">忘记手势密码</string>
    <string name="yongqitazhanghaodenglv">用其他账号登录</string>
    <string name="shenzhen">深圳</string>
    <string name="shoufeibiaozhun">收费标准=用车时长费用+里程费用(?)</string>
    <string name="feiyongshisuan">费用试算</string>
    <string name="zujinshi">/时</string>
    <string name="zujintian">/天</string>
    <string name="zujinyue">/月</string>
    <string name="zulinqingkuang">今日租赁情况</string>
    <string name="yi">1</string>
    <string name="er">6</string>
    <string name="san">12</string>
    <string name="si">18</string>
    <string name="wu">24</string>
    <string name="cheliangxiangqing">车辆详情</string>
    <string name="kezurili">可租日历</string>
    <string name="cheliangmiaoshu">车辆描述</string>
    <string name="zuchexuzhi">租车须知</string>
    <string name="bujimianpeishuoming">基本保险:</string>
    <string name="lijizuyong">立即租用</string>
    <string name="quxiao">取消</string>
    <string name="jintian">本月</string>
    <string name="dingdanfeiyong">订单费用</string>
    <string name="shichangleixing">时长类型:</string>
    <string name="shenqingchangzu">申请长租</string>
    <string name="fen">分</string>
    <string name="shi">时</string>
    <string name="xuzushichangxuane">请选择续租还车时间</string>
    <string name="ri">日</string>
    <string name="qingxuanzxhehuacheshijian">请选择换车时间</string>
    <string name="yue">月</string>
    <string name="nian">年</string>
    <string name="nian2">YYYY</string>
    <string name="yue2">MM</string>
    <string name="ri2">DD</string>
    <string name="qucheshijian">取车时间</string>
    <string name="qucheshijian2">请选择取车时间</string>
    <string name="haicheshijian">还车时间</string>
    <string name="haicheshijian2">请选择还车时间</string>
    <string name="yongcheshichang">用车时长:</string>
    <string name="yudingzucheshichang">预定租车时长:</string>
    <string name="zuchefeiyong">租车费用:</string>
    <string name="lichengfeiyong">里程费用:</string>
    <string name="wangdianxinxi">网点信息</string>
    <string name="quchewangdian">取车网点:</string>
    <string name="haichewangdian">还车网点:</string>
    <string name="haiquchewangdian">取车/还车网点:</string>
    <string name="hejiyufukuan">合计预付款</string>
    <string name="tijiaodingdan">提交订单</string>
    <string name="cheliangleixing">车辆类型</string>
    <string name="lichengyugu">里程预估:</string>
    <string name="gongli">公里</string>
    <string name="feiyongheji">费用合计</string>
    <string name="huiyuanrenzheng">会员认证</string>
    <string name="huiyuanrenzhenginfor">注册成功!现在您可以使用地上铁APP充电了!</string>
    <string name="huiyuanrenzhenginfor2">继续完成以下认证即可开始租车</string>
    <string name="zhenshixingming2">请输入真实姓名</string>
    <string name="shenfenzheng">身份证上传</string>
    <string name="jiashizheng">驾驶证上传</string>
    <string name="shenfenzheng2">请上传身份证</string>
    <string name="jiashizheng2">请上传驾驶证</string>
    <string name="tijiaorenzheng">提交认证</string>
    <string name="qiyechangzushenqing">企业长租申请</string>
    <string name="qiyemingchen">企业名称</string>
    <string name="qiyemingchen2">请输入企业名称</string>
    <string name="yingyezhizhao">营业执照</string>
    <string name="yingyezhizhao2">请上传营业执照</string>
    <string name="yongcheshichang2">用车时长</string>
    <string name="yongcheshuliang">用车数量</string>
    <string name="yongcheshichang3">请输入时长(小时)</string>
    <string name="yongcheshuliang2">请输入用车数量</string>
    <string name="lianxiren">联系人</string>
    <string name="lianxiren2">请输入联系人</string>
    <string name="lianxirendianhua">联系人电话</string>
    <string name="lianxirendianhua2">请输入联系人电话</string>
    <string name="wallet">我的钱包</string>
    <string name="moneyyue">可消费金额(元)</string>
    <string name="chongzhi">充值</string>
    <string name="tixian">提现</string>
    <string name="mingxi">明细</string>
    <string name="jine">金额</string>
    <string name="money">请输入充值金额(单位：元)</string>
    <string name="yibai">￥100</string>
    <string name="erbai">￥200</string>
    <string name="wubai">￥500</string>
    <string name="yiqian">￥1000</string>
    <string name="paytype">选择支付方式:</string>
    <string name="querenchongzhi">确认充值</string>
    <string name="zhifubao">支付宝支付</string>
    <string name="weixin">微信支付</string>
    <string name="wodedingdan">我的订单</string>
    <string name="quanbudingdan">全部订单</string>
    <string name="all">全部</string>
    <string name="daifukuan">待付款</string>
    <string name="daitiche">待提车</string>
    <string name="yitiche">已提车</string>
    <string name="yiquxiao">已取消</string>
    <string name="chelaingyajin">车辆押金</string>
    <string name="baoxianfuwu">保险服务</string>
    <string name="zuijinfukuan">最近付款:</string>
    <string name="zuchejiesuan">租车结算:</string>
    <string name="heji">合计:</string>
    <string name="dingdanxiangqiang">订单详情</string>
    <string name="tarendaiqu">他人代取</string>
    <string name="lijifukuan">立即付款</string>
    <string name="shenqingxuzu">申请续租</string>
    <string name="quxiaodingdan">取消订单</string>
    <string name="shenqinghuanche">申请换车</string>
    <string name="dangqiandingdan">当前订单:</string>
    <string name="huancheliyou">换车理由:</string>
    <string name="dianlibuzu">电力不足</string>
    <string name="cheliangguzhang">车辆故障</string>
    <string name="qitayuanyin">其他原因</string>
    <string name="huancheshijian">换车时间:</string>
    <string name="yichenggongtijiaochengq">已成功提交申请!</string>
    <string name="yichenggongtijiaochengq2">我们将在两个工作日内与您取得联系</string>
    <string name="yichenggongtijiaochengq3">您也可以致电400 860 4558咨询</string>
    <string name="tijiaoshenqing">提交申请</string>
    <string name="fanhuizhuye">返回主页</string>
    <string name="weituotarendaiqu">委托他人代取</string>
    <string name="weituotarendaiqu2">已委托他人代取</string>
    <string name="qucherenxingming">取车人姓名:</string>
    <string name="qucherenshouji">取车人手机:</string>
    <string name="tijiaoqueren">提交确认</string>
    <string name="xuzushichang">续租时间:</string>
    <string name="xuzuinfor2">续租租金:</string>
    <string name="xuzuinfor3">(租金将在还车时一并结算)</string>
    <string name="tiche">提车</string>
    <string name="haiche">还车</string>
    <string name="zujinjiesuan">租金结算</string>
    <string name="weizhangjiesuan">违章结算</string>
    <string name="dingdanhao">订单号</string>
    <string name="qucheshijian3">取车时间:</string>
    <string name="haicheshijian3">还车时间:</string>
    <string name="feiyongjiyajinshuoming">费用及押金说明</string>
    <string name="zujinheji">租金合计:</string>
    <string name="zujinyajin">租车押金:</string>
    <string name="baoxianfuwu2">保险服务:</string>
    <string name="zhifufeiyong">支付费用</string>
    <string name="hejifufukuan">合计预付款:</string>
    <string name="weizhangchaxun">违章查询</string>
    <string name="zuchetiaokuan">租车声明</string>
    <string name="qianbaoyue">钱包余额:</string>
    <string name="qianbaoyue2">余额不足，请充值</string>
    <string name="xiaoxizhongxin">消息中心</string>
    <string name="shanchu">删除</string>
    <string name="dingdanzhifu">订单支付</string>
    <string name="fukuaninfor">请在三十分钟内完成付款</string>
    <string name="qianbaoyuezhifu">钱包余额</string>
    <string name="dingdanjine">订单金额:</string>
    <string name="zuchexinxi">租车信息</string>
    <string name="shijihaicheshijian">实际还车时间:</string>
    <string name="chaochushijian">超出时间:</string>
    <string name="chaochuyudingshichang">超出预定时长:</string>
    <string name="shijixingshilicheng">实际行驶里程:</string>
    <string name="jianmianlicheng">减免里程:</string>
    <string name="feiyongxinxi">费用信息</string>
    <string name="chaoshizujin">超时租金:</string>
    <string name="baoxianjine">保险金额:</string>
    <string name="feiyongheji2">费用合计:</string>
    <string name="yajin">押金</string>
    <string name="dingdanjiesuan">订单结算</string>
    <string name="cheliangyajin">车辆押金:</string>
    <string name="weizhangyajin">违章押金:</string>
    <string name="mendianxuanze">门店选择</string>
    <string name="map_collection">收藏</string>
    <string name="mendianxuanze2">城市列表</string>
    <string name="shaixuanjiekou">筛选充电站</string>
    <string name="mapserchinput">请输入充电站名称</string>
    <string name="genwozou">跟我走</string>
    <string name="quedingshaixuan">确定筛选</string>
    <string name="shaixuan">筛选</string>
    <string name="xuanzechengshi">选择城市</string>
    <string name="diazhanxianxi">电站信息</string>
    <string name="dianzhuangxinxi">电桩信息</string>
    <string name="dianzhuangcanshu">电桩参数</string>
    <string name="dingdanbiaohao">订单号:</string>
    <string name="chongdianxinxi">充电信息</string>
    <string name="chongdianshichang">充电时长</string>
    <string name="feiyongqueren">费用确认</string>
    <string name="queren">确认</string>
    <string name="hejifeiyong">合计费用:</string>
    <string name="lijixuanche">立即选车</string>
    <string name="walletlist">收支明细</string>
    <string name="querenfukuan">确认付款</string>
    <string name="logout">退出登录</string>
    <string name="mendianxuanze3">门店列表</string>
    <string name="wangdianxuanze">网点选择</string>
    <string name="chongdianinfor">您有一个正在进行的充电任务</string>
    <string name="weather_infor_top">天气炎热，请避免电动汽车暴晒，在阴凉处充电</string>
    <string name="weather_infor_low">天气寒冷，建议热车5分钟后熄火再充电</string>
    <string name="weather_infor_medium">天气始终，建议热车5分钟后熄火再充电</string>
    <string name="weather_infor">行车前请先检查电量是否充足，避免半路抛锚哦</string>
    <string name="weather_infor1">行车前请检查随车消防器材功能是否正常</string>
    <string name="zhu">注:</string>
    <string name="zhu1">1、未支付订单可以随时取消，不收取手续费</string>
    <string name="zhu2">2、取消已支付订单，将会扣取已支付金额的10%作为手续费，余额在五个工作日内退还至支付账户</string>
    <string name="guanbi">关闭</string>
    <string name="qurenquxiao">确认取消</string>
    <string name="feiyongshuoming">费用说明</string>
    <string name="dingdanfeiyongshuoming2_infor">租车费用=预订租车时长×单价</string>
    <string name="dingdanfeiyongshuoming2_infor2">超时租金=超出预定时长×单价</string>
    <string name="dingdanfeiyongshuoming2_infor3">保险金额=预订租车时长×保险单价(注：不足一天按一天计价)</string>
    <string name="dingdanfeiyongshuoming2_infor4">
        里程费用=(实际行驶里程-减免里程)×里程单价(注：如果实际行驶里程小于起步里程，则按起步里程计价)
    </string>
    <string name="dingdanfeiyongshuoming2_infor5">其他费用：根据还车时车辆的实际车况而定</string>
    <string name="input_oldpwd">请输入原密码</string>
    <string name="input_newpwd">请输入新密码</string>
    <string name="input_newpwd2">请再次输入新密码</string>
    <string name="cancle">取消</string>
    <string name="camera">打开相机</string>
    <string name="photos">打开相册</string>
    <string name="add">新增</string>
    <string name="changepwd">修改密码</string>
    <string name="carnumber">车牌号：</string>
    <string name="cartype">车型：</string>
    <string name="carnumberhint">请输入车牌号</string>
    <string name="cartypehint">请输入车型（可为空）</string>
    <string name="click">点击选择</string>
    <string name="carchargetype">充电连接类型：</string>
    <string name="suggestinfor">您有什么意见或者建议，请告诉地上铁吧！</string>
    <string name="baidudaohang">百度导航</string>
    <string name="gaodedaohang">高德导航</string>
</resources>