<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/wpx630"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/hpx88"
        android:gravity="center"
        android:text="@string/feiyongshuoming"
        android:textColor="@color/textgreen"
        android:textSize="@dimen/sp16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/hpx1"
        android:background="@color/line_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/wpx20"
        android:layout_marginRight="@dimen/wpx20"
        android:gravity="center_vertical"
        android:minHeight="@dimen/hpx80"
        android:text="@string/dingdanfeiyongshuoming2_infor"
        android:textColor="@color/gray4"
        android:textSize="@dimen/sp16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/wpx20"
        android:layout_marginRight="@dimen/wpx20"
        android:gravity="center_vertical"
        android:minHeight="@dimen/hpx80"
        android:text="@string/dingdanfeiyongshuoming2_infor2"
        android:textColor="@color/gray4"
        android:textSize="@dimen/sp16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/wpx20"
        android:layout_marginRight="@dimen/wpx20"
        android:gravity="center_vertical"
        android:minHeight="@dimen/hpx80"
        android:text="@string/dingdanfeiyongshuoming2_infor3"
        android:textColor="@color/gray4"
        android:textSize="@dimen/sp16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/wpx20"
        android:layout_marginRight="@dimen/wpx20"
        android:gravity="center_vertical"
        android:minHeight="@dimen/hpx80"
        android:text="@string/dingdanfeiyongshuoming2_infor4"
        android:textColor="@color/gray4"
        android:textSize="@dimen/sp16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/wpx20"
        android:layout_marginRight="@dimen/wpx20"
        android:gravity="center_vertical"
        android:minHeight="@dimen/hpx80"
        android:text="@string/dingdanfeiyongshuoming2_infor5"
        android:textColor="@color/gray4"
        android:textSize="@dimen/sp16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/hpx1"
        android:layout_marginTop="@dimen/hpx20"
        android:background="@color/line_gray" />

    <TextView
        android:id="@id/view_feiyongshuoming_cancel2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hpx90"
        android:gravity="center"
        android:text="@string/guanbi"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp16" />

</LinearLayout>