<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/wpx600"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/xinzeng_frame"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/hpx2"
    android:paddingTop="@dimen/hpx2" >

    <TextView
        android:id="@id/view_rounplan_dialog_baidu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hpx100"
        android:gravity="center"
        android:text="@string/baidudaohang"
        android:textColor="@color/black"
        android:textSize="@dimen/sp16" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/hpx2"
        android:scaleType="fitXY"
        android:src="@drawable/line" />

    <TextView
        android:id="@id/view_rounplan_dialog_gaode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hpx100"
        android:gravity="center"
        android:text="@string/gaodedaohang"
        android:textColor="@color/black"
        android:textSize="@dimen/sp16" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/hpx2"
        android:scaleType="fitXY"
        android:src="@drawable/line" />

    <TextView
        android:id="@id/view_rounplan_dialog_cancle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hpx100"
        android:gravity="center"
        android:text="@string/cancle"
        android:textColor="@color/black"
        android:textSize="@dimen/sp16" />

</LinearLayout>